Fix tap size of content list. Avoid overlapping tap areas

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,7 +52,7 @@ a {
   top: 0;
 }
 
-a.contents {
+.contents {
   text-decoration: none;
   padding-top: 24px;
   padding-bottom: 24px;
